meddled with build_time_stamp to see if the error would clear

--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -3,7 +3,8 @@
   hosts: appsrvgrp
   become: yes
   vars:
-    timestamp: "{{ansible_date_time.date}}_{{ansible_date_time.hour}}_{{ansible_date_time.minute}}"
+  #  timestamp: "{{ansible_date_time.date}}_{{ansible_date_time.hour}}_{{ansible_date_time.minute}}"
+    timestamp: "{{ansible_date_time.date}}_{{ansible_date_time.hour}}"
   tasks:
     - name: Download latest VProfile.war from nexus
       get_url:
