--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -4,12 +4,13 @@
   become: yes
   vars:
   #  timestamp: "{{ ansible_date_time.date }}_{{ ansible_date_time.hour }}_{{ ansible_date_time.minute }}"
-    timestamp: "{{ ansible_date_time.date }}"
+  #  timestamp: "{{ ansible_date_time.date }}"
+    timestamp: "{{ lookup('pipe', 'date +%Y-%m-%dT%H-%M-%S-UTC') }}"
   tasks:
     - name: Download latest VProfile.war from nexus
       get_url:
       #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}-{{time}}/{{vprofile_version}}"
-        url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ time }}/{{ build }}/{{ vprofile_version }}"
+        url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ timestamp }}/{{ build }}/{{ vprofile_version }}"
       # url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}"
         
         dest: "/tmp/vproapp-{{ vprofile_version }}"
