--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -10,7 +10,7 @@
     - name: Download latest VProfile.war from nexus
       get_url:
       #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}-{{time}}/{{vprofile_version}}"
-        url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ timestamp }}/{{ build }}/{{ vprofile_version }}"
+        url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ time }}/{{ build }}/{{ vprofile_version }}"
       #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}/{{vprofile_version}}"
         
         dest: "/tmp/vproapp-{{ vprofile_version }}"
