--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -14,6 +14,7 @@
       #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}/{{vprofile_version}}"
         
         dest: "/tmp/vproapp-{{ vprofile_version }}"
+        dest: "/tmp/vproapp-2""
       register: wardeploy
       tags:
        - deploy
