--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -13,8 +13,8 @@
         url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ build }}/{{ vprofile_version }}"
       #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}/{{vprofile_version}}"
         
-        dest: "/tmp/vproapp-{{ vprofile_version }}"
-        dest: "/tmp/vproapp-2""
+       # dest: "/tmp/vproapp-{{ vprofile_version }}"
+        dest: "/tmp/vproapp-2"
       register: wardeploy
       tags:
        - deploy
@@ -63,7 +63,9 @@
         block:
          - name: Deploy vprofile artifact
            copy:
-             src: "/tmp/vproapp-{{vprofile_version}}"
+             #src: "/tmp/vproapp-{{vprofile_version}}"
+             src: "/tmp/vproapp-2"
+             
              dest: /usr/local/tomcat8/webapps/ROOT.war
              remote_src: yes
            register: deploy_info
