--- a/ansible/vpro-app-setup.yml
+++ b/ansible/vpro-app-setup.yml
@@ -9,12 +9,12 @@
   tasks:
     - name: Download latest VProfile.war from nexus
       get_url:
-      #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}-{{time}}/{{vprofile_version}}"
-        url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ build }}.war"
+        url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}-{{time}}/{{vprofile_version}}"
+       # url: "http://{{ USER }}:{{ PASS }}@{{ nexusip }}:8081/repository/{{ reponame }}/{{ groupid }}/{{ artifactid }}/{{ build }}.war"
       #  url: "http://{{USER}}:{{PASS}}@{{nexusip}}:8081/repository/{{reponame}}/{{groupid}}/{{artifactid}}/{{build}}/{{vprofile_version}}"
         
-       # dest: "/tmp/vproapp-{{ vprofile_version }}"
-        dest: "/tmp/vproapp-2"
+        dest: "/tmp/vproapp-{{ vprofile_version }}"
+       # dest: "/tmp/vproapp-2"
       register: wardeploy
       tags:
        - deploy
@@ -63,8 +63,8 @@
         block:
          - name: Deploy vprofile artifact
            copy:
-             #src: "/tmp/vproapp-{{vprofile_version}}"
-             src: "/tmp/vproapp-2"
+             src: "/tmp/vproapp-{{vprofile_version}}"
+             #src: "/tmp/vproapp-2"
              
              dest: /usr/local/tomcat8/webapps/ROOT.war
              remote_src: yes
