--- a/Docker-files/web/Dockerfile
+++ b/Docker-files/web/Dockerfile
@@ -3,4 +3,4 @@ LABEL "Project"="Vprofile"
 LABEL "Authore"="junaid"
 
 RUN rm -rf /etc/nginx/conf.d/defaults.conf
-COPY nginxvproapp.conf /etc/nginx/conf.d/vproapp.conf
+COPY nginvproapp.conf /etc/nginx/conf.d/vproapp.conf
