--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -5,7 +5,7 @@ RUN apt update && apt install maven -y
 RUN git clone https://github.com/devopshydclub/vprofile-project.git
 RUN cd vprofile-project && git checkout docker && mvn install
 
-FROM tomacat:9-jre11
+FROM tomcat:9-jre11
 LABEL "project"="vprofile"
 LABEL "Author"="Junaid"
 RUN rm -rf /usr/local/tomcat/webapps/*
