fix docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,13 @@ services:
   
   vprocache01:
     image: memcached
-    ports: "11211:11211"
+    ports: 
+      - "11211:11211"
   
   vpromq01:
     image: rabbitmq
-    ports: "15672:15672"
+    ports: 
+      - "15672:15672"
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
@@ -44,5 +46,5 @@ services:
 volumes:
  vprodbdata: {}
  vproappdata: {}
-  
+
     
