--- a/Docker-files/app/Dockerfile
+++ b/Docker-files/app/Dockerfile
@@ -1,13 +1,13 @@
 FROM openjdk:11 AS BUILD_IMAGE
 RUN apt update && install maven -y
-RUN git clone https://github.com/luanndm-dream/vprofile-project-devops.git
-RUN cd vprofile-project && git checkout docker && mvn install
+RUN git clone https://github.com/luanndm-dream/nothing-devops-v1.git
+RUN cd nothing-devops-v1 && git checkout docker && mvn install - y
 
 FROM tomcat:9-jre11
 LABEL "Project"="Vprofile"
 LABEL "Author"="Nothing"
 RUN rm -rf /usr/local/tomcat/webapps/*
-COPY --from=BUILD_IMAGE vprofile-project/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
+COPY --from=BUILD_IMAGE nothing-devops-v1/target/vprofile-v2.war /usr/local/tomcat/webapps/ROOT.war
 
 EXPOSE 8080
 CMD ["catalina.sh","run"]
