fix maven in staging jenkinsfile

--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -5,7 +5,7 @@ def COLOR_MAP = [
 pipeline {
     agent any
     tools {
-        maven "MAVEN3"
+        maven "maven3"
         jdk "jdk17"
     }
     
