--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -14,10 +14,10 @@ pipeline {
 		NEXUS_USER = 'admin'
 		NEXUS_PASS = 'walter'
 		RELEASE_REPO = 'vprofile-release'
-		CENTRAL_REPO = 'vpro-maven-central'
+		CENTRAL_REPO = 'vprofile-release'
 		NEXUSIP = '34.134.153.215'
 		NEXUSPORT = '8081'
-		NEXUS_GRP_REPO = 'vpro-maven-group'
+		NEXUS_GRP_REPO = 'vprofile-group'
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonar-server'
         SONARSCANNER = 'sonar-scanner'
