--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
 		    <plugin>
 		        <groupId>org.jacoco</groupId>
 		        <artifactId>jacoco-maven-plugin</artifactId>
-		        <version>0.7.2.201409121644</version>
+		        <version>0.8.8</version>
 		        <executions>
 		            <execution>
 		                <id>jacoco-initialize</id>
@@ -154,6 +154,21 @@
 		            </execution>
 		        </executions>
 		</plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.1</version>
+        </plugin>
+        <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-compiler-plugin</artifactId>
+             <version>3.8.1</version>
+             <configuration>
+                  <source>17</source>
+                  <target>17</target>
+             </configuration>
+        </plugin>
+ 
         </plugins>
     </build>
 	<repositories>
