configure jenkifile with ecr config

--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         SONARSCANNER = 'sonar-scanner'
         registryCredential = 'ecr:us-east-2:aws-cred-id'
         appRegistry = '163447728448.dkr.ecr.us-east-2.amazonaws.com/vprofileappimg'
-        vprofileRegistry = "163447728448.dkr.ecr.us-east-2.amazonaws.com/vprofileappimg"
+        vprofileRegistry = "https://163447728448.dkr.ecr.us-east-2.amazonaws.com"
     }
 
     stages {
