update the jenkinsfile

--- a/ProdPipeline/Jenkinsfile
+++ b/ProdPipeline/Jenkinsfile
@@ -124,9 +124,17 @@ pipeline {
     post {
         always {
             echo 'Slack Notifications.'
-            slackSend channel: '#jenkinscicd',
+            slackSend (
+                channel: '#jenkinscicd',
                 color: COLOR_MAP[currentBuild.currentResult],
                 message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URL}"
+            )
+
+            mail (
+                to: 'jofranco1203@gmail.com',
+                subject: "Build ${env.JOB_NAME} - #${env.BUILD_NUMBER} ${currentBuild.currentResult}",
+                body: "Build details: ${env.BUILD_URL}"
+            )    
         }
     }
 }
