Add app-secret.yaml file-1

--- a/app-secret.yaml
+++ b/app-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: app-secret
-type: Opaque
+type: Opaq
 data:
   db-pass: dnByb2RicGFzcw==
   rmq-pass: Z3Vlc3Q=
