--- a/app-secret.yaml
+++ b/app-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: app-secret
-type: Opaq
+type: Opaque
 data:
   db-pass: dnByb2RicGFzcw==
   rmq-pass: Z3Vlc3Q=
