--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
           <version>3.0.0</version>
         </plugin>
         
-          <plugin>
+         <! -- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.20.1</version>
@@ -135,7 +135,7 @@
             <suiteXmlFile>testng.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
-      </plugin>
+      </plugin> -->
         
       </plugins>
     </pluginManagement>
