--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,9 @@
  <!--  <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.18.0</version> <!-- Latest stable version -->
+      <version>2.18.0</version> Latest stable version
     </dependency> -->
+	  
      <dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
