--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>  
- <!--  <dependency>
+  <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.18.0</version> Latest stable version
-    </dependency> -->
+      <version>2.18.0</version> 
+   </dependency>
 	  
      <dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
